Final batch of additions for the Java compatibility. Consuming works as well.